--- a/libbsm/au_io.3
+++ b/libbsm/au_io.3
@@ -133,8 +133,8 @@ The function
 .Fn au_fetch_tok
 returns 0, while the function
 .Fn au_read_rec
-returns the number of bytes read, on success. Both functions return \-1 on
-failure with
+returns the number of bytes read, on success.
+Both functions return \-1 on failure with
 .Va errno
 set appropriately.
 .Sh SEE ALSO
