Replace Exit Status statement with .Ex -std

--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -89,10 +89,7 @@ Events are displayed as per their descriptions given in
 UIDs and GIDs are expanded to their names;
 dates and times are displayed in human-readable format.
 .Sh EXIT STATUS
-The
-.Nm
-utility exits 0 on success,
-and 1 if an error occurs.
+.Ex -std
 .Sh FILES
 .Bl -tag -width ".Pa /etc/security/audit_control" -compact
 .It Pa /etc/security/audit_class
