--- a/libbsm/au_event.3
+++ b/libbsm/au_event.3
@@ -30,6 +30,8 @@
 .Nm free_au_event_ent ,
 .Nm setauevent ,
 .Nm endauevent ,
+.Nm setauevent_fp ,
+.Nm endauevent_fp ,
 .Nm getauevent ,
 .Nm getauevent_r ,
 .Nm getauevnam ,
@@ -46,7 +48,11 @@
 .Ft void
 .Fn setauevent void
 .Ft void
+.Fn setauevent_fp "FILE *"
+.Ft int
 .Fn endauevent void
+.Ft int
+.Fn endauevent_fp "FILE *"
 .Ft "struct au_event_ent *"
 .Fn getauevent void
 .Ft "struct au_event_ent *"
@@ -94,13 +100,23 @@ closes the
 database session.
 .Pp
 The
+.Fn setauevent_fp
+function
+can be used if the process using the event database is running
+in a sandbox and would like to provide a file handle to the library
+to use. It should be noted that libbsm will not cleanup this file,
+and it is the responsibility of the caller to do so using the
+.Fn endauevent_fp
+function.
+.Pp
+The
 .Fn getauevent
 function
 returns a reference to the next entry in the
 .Xr audit_event 5
 database.
 .Pp
-The
+the
 .Fn getauevnam
 function
 returns a reference to the entry in the
@@ -139,6 +155,12 @@ on success, or
 on failure, with
 .Va errno
 set to provide further error information.
+.Pp
+The
+.Fn setauevent_fp
+and
+.Fn endauevent_fp
+functions will both return non-zero if the referenced stream is NULL.
 .Sh SEE ALSO
 .Xr libbsm 3 ,
 .Xr audit_event 5
