--- a/libbsm/au_event.3
+++ b/libbsm/au_event.3
@@ -116,7 +116,7 @@ returns a reference to the next entry in the
 .Xr audit_event 5
 database.
 .Pp
-the
+The
 .Fn getauevnam
 function
 returns a reference to the entry in the
